commit tweaks relative import paths for prebuilt samples

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
     <link
       rel="preload"
-      href="dist-assets/ui5-yew-todo-c32797535e81b1f1_bg.wasm"
+      href="./dist-assets/ui5-yew-todo-c32797535e81b1f1_bg.wasm"
       as="fetch"
       type="application/wasm"
       crossorigin=""
     />
     <link
       rel="modulepreload"
-      href="dist-assets/ui5-yew-todo-c32797535e81b1f1.js"
+      href="./dist-assets/ui5-yew-todo-c32797535e81b1f1.js"
     />
   </head>
   <body>
     <script type="module">
-      import init from "dist-assets/ui5-yew-todo-c32797535e81b1f1.js";
-      init("dist-assets/ui5-yew-todo-c32797535e81b1f1_bg.wasm");
+      import init from "./dist-assets/ui5-yew-todo-c32797535e81b1f1.js";
+      init("./dist-assets/ui5-yew-todo-c32797535e81b1f1_bg.wasm");
     </script>
   </body>
 </html>
